syntax = "proto3";

import "comm_proto/grpc.proto";

option go_package = "github.com/lpy-neo/micro-framework-test/grpc-gateway/helloworld";
package helloworld;

// The greeting service definition.
service Greeter {
  rpc GrpcReq (comm_proto.GrpcRequest) returns (comm_proto.GrpcReply) {}
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 age = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
